fix(client/components/features/OrderForm/BlockContainer): bug with margin collapse add display flex to content

--- a/client/src/components/features/OrderFrom/BlockContainer/styles.module.scss
+++ b/client/src/components/features/OrderFrom/BlockContainer/styles.module.scss
@@ -15,5 +15,6 @@
 }
 
 .content {
+  display: flex;
   padding-inline: 35px;
 }
